# LinuxColisor

./: GlutProjectColisions.sln
GlutProjectColisions/: CMakeLists.txt  GlutProjectColisions.vcxproj  GlutProjectColisions.vcxproj.filters  commands.c  drawStuff.c  main.c  main.h  parameterFile.txt  physics.c  readFile.c  renderStuff.c  stb.c
GlutProjectColisions/x64/Debug/: GlutProjectColisions.exe.recipe  GlutProjectColisions.ilk  vc143.idb
GlutProjectColisions/x64/Debug/GlutProj.da5d80d9.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GlutProjectColisions.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
